
Flume 0.9.2 is *not backwards compatible* with <0.9.2 installations
due to FLUME-216 - this release changes how configurations and node
maps are persisted to ZooKeeper and 0.9.2 masters cannot read
configurations or node maps written by masters from <0.9.2
installations. There is no upgrade path yet to preserve both node maps
and configurations, but one is planned for the 0.9.2 release.


Flume 0.9.1 Update 1 (CDH3b3) Release Notes
===========================================   

This release is a bugfix update to the 0.9.1 release.

The only new features added to this release are:
* Support for writing to kerberized HDFS.
* Some minor fixes that prevent some user errors
* Some cosmetic fixes to the web interface.

Bug fixes:
* Critical bug fixes having to do with node hangs or situations where
  agents do not properly recover from failures. 

Many documentation updates including:
* A "cookbook" of example use case tutorials 
* Documentation corrections 
* More details on plugin behavior

Compatiblity Changes: 
* When run from the command line, Flume now defaults to storing the
  agent data in /tmp/flume-${user.name} instead of /tmp/flume. When
  upgrading an existing installation, if you have not configured an
  alternate path, please rename /tmp/flume to /tmp/flume-flume

Known bugs (includes 0.9.1 issues):
* Tail is updated to potentially fix a race condition but races are
  still possible (FLUME-218).  Another implementation is pending for a
  0.9.2 release (FLUME-252).

Flume 0.9.1 Release notes
=========================

This release improves and adds several key features including:
* gzip HDFS output file compression 
* tailDir source 
* Exposed internal configuration and extension information via web
  pages
* Automated eclipse project generation via ant

Documentation:
* Added documentation to source repository 
* Example plugins and documentation on plugins.
* Numerous typographic corrections.

There were several critical fixes in this release as well.